# fastingress

./: Cargo.toml  Dockerfile  KUBE_API.md  Makefile  README.md  SPEC.md  TESTING.md  update-image.sh
.github/workflows/: ci.yml
kubernetes/: ingress.yml  sample-conf3.yml  sample-configuration.yml  sample-configuration2.yml  sample_ingress_api_response.json
scripts/: prepare-test.sh  test-teardown.sh  verify-proxy-api.sh
src/: api_resolver.rs  api_watcher.rs  constants.rs  ingress.rs  ingress_resource_json_parser.rs  ingress_resource_resolver.rs  ipfinder.rs  kube_api_structs.rs  kube_client_resolver.rs  lib.rs  logger.rs  main.rs  paths.rs  proxy.rs  request_handler.rs  route_entry.rs  route_entry_resolver.rs  routedebugger.rs  service_resolver.rs  types.rs  uri_resolver.rs  utils.rs
src/ingress_watcher/: event_handler.rs  event_type.rs  ingress_appied_handler.rs  ingress_delete_handler.rs  mod.rs  watcher.rs
src/routematching/: matcher.rs  mod.rs  prefixmatcher.rs
src/urlresolving/: incluster_url_resolver.rs  mod.rs  proxied_url_resolver.rs
tests/: test_api_resolver.rs  test_find_internal.rs  test_http.rs  test_ip_resolver.rs  test_json_parse.rs  test_prefix_routematcher.rs  test_proxied_apiwatc.rs  test_url_resolver_incluster.rs  test_url_resolver_proxied.rs
tests/incluster/: test_proxied_ipfinder.rs
