[package]
name = "fastingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.1.0"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.88.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
futures = "0.3.30"
rand = "0.8"